--- a/index.html
+++ b/index.html
@@ -178,7 +178,7 @@
     <section id="details" class="clearfix">
 
       <div class="wrapper">
-
+        <div class="col-1">
         <div class="border_right">
           <h3>Contact</h3>
           <p>email: <a href="mailto:info@zhwshoes.com">info@zhwshoes.com</a><br>
@@ -188,7 +188,7 @@
           P.O. Box 5555<br>
           Maricia, CA 91555, USA</address>
         </div>
-
+        </div>
         <div class="border_right">
           <h3>Links</h3>
           <p><a href="#" target="_blank">Shoe Repair & Restoration</a><br>
