automatically backed up by learn

--- a/index.html
+++ b/index.html
@@ -189,6 +189,8 @@
           Maricia, CA 91555, USA</address>
         </div>
         </div>
+        
+        <div class="col-1">
         <div class="border_right">
           <h3>Links</h3>
           <p><a href="#" target="_blank">Shoe Repair & Restoration</a><br>
@@ -199,6 +201,7 @@
           <a href="#" target="_blank">Diesel Payment Gateway</a><br>
           <a href="#" target="_blank">Consumer Affairs</a><br>
           <a href="#" target="_blank">Spearhead Artist Mgmt.</a></p>
+        </div>
         </div>
 
         <div class="">
