--- a/index.html
+++ b/index.html
@@ -178,7 +178,7 @@
     <section id="details" class="clearfix">
 
       <div class="wrapper">
-        <div class="col-1">
+        <div class="col-1 first">
         <div class="border_right">
           <h3>Contact</h3>
           <p>email: <a href="mailto:info@zhwshoes.com">info@zhwshoes.com</a><br>
