--- a/index.html
+++ b/index.html
@@ -203,7 +203,7 @@
           <a href="#" target="_blank">Spearhead Artist Mgmt.</a></p>
         </div>
         </div>
-
+      <div class="col-1">
         <div class="">
           <h3>Follow</h3>
           <p><a href="#" target="_blank">Youtube</a><br>
@@ -213,7 +213,7 @@
           <a href="#" target="_blank">Foursquare</a><br>
           <a href="#" target="_blank">Google Plus</a></p>
         </div>
-
+      </div>
       </div><!-- .wrapper -->
 
     </section>
