--- a/index.html
+++ b/index.html
@@ -190,8 +190,7 @@
         </div>
         </div>
         
-      <div class="col-1">
-        <div class="border_right">
+        <div class="border_right col-1">
           <h3>Links</h3>
           <p><a href="#" target="_blank">Shoe Repair & Restoration</a><br>
           <a href="#" target="_blank">Fashion Editors Assoc.</a><br>
@@ -201,7 +200,6 @@
           <a href="#" target="_blank">Diesel Payment Gateway</a><br>
           <a href="#" target="_blank">Consumer Affairs</a><br>
           <a href="#" target="_blank">Spearhead Artist Mgmt.</a></p>
-        </div>
         </div>
       
         <div class="col-1">
