--- a/index.html
+++ b/index.html
@@ -178,8 +178,7 @@
     <section id="details" class="clearfix">
 
       <div class="wrapper clearfix">
-      <div class="col-1 first">
-        <div class="border_right">
+        <div class="border_right col-1 first">
           <h3>Contact</h3>
           <p>email: <a href="mailto:info@zhwshoes.com">info@zhwshoes.com</a><br>
           phone: +1 504 555 5555</p>
@@ -187,7 +186,6 @@
           <address>ZHW Shoes<br>
           P.O. Box 5555<br>
           Maricia, CA 91555, USA</address>
-        </div>
         </div>
         
         <div class="border_right col-1">
